--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6529,6 +6529,13 @@ textarea.form-control-lg {
   gap: 3rem !important;
 }
 
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #e9ecef;
+  border-radius: .3rem;
+}
+
 .justify-content-start {
   justify-content: flex-start !important;
 }
